# ICPad

./: .gitignore  Cargo.toml  INTEGRATION_GUIDE.md  MOTOKO_COMPILER_INTEGRATION.md  README.md  TERMINAL_DEMO.md  deploy.sh  dfx.json  dfx.json.backup  package-lock.json  package.json  temp_append.txt  temp_dynamic_ide_context.jsx
src/ICPad_backend/: Cargo.toml  ICPad_backend.did
src/ICPad_backend/src/: lib.rs
src/ICPad_frontend/: ICPad_backend.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/ICPad_frontend/public/wasm/: motoko-worker.js
src/ICPad_frontend/src/: App.js  App.jsx  main.jsx
src/ICPad_frontend/src/Pages/: Dashboard.jsx  Deploypage.jsx  IDEpage.jsx  IDEpage.jsx.backup  Landingpage.jsx  MArketplacepage.jsx  Settingpage.jsx
src/ICPad_frontend/src/components/: Button.jsx  CanisterTest.jsx  Card.jsx  CompilationResults.jsx  FileExplorer.jsx  LandingPageContent.jsx  LandingPageTopBar.jsx  Navbar.jsx  Sidebar.jsx  Terminal.jsx  TerminalComponent.jsx
src/ICPad_frontend/src/contexts/: IDEContext.jsx  IDEContext.jsx.backup2  PrincipalContext.jsx  ThemeContext.jsx
src/ICPad_frontend/src/utils/: Icons.jsx  canisterService.js  canisterService.js.backup  functionParser.js  marketplaceService.js  (+3 more)
src/ICPad_frontend_rust/: Cargo.toml
src/ICPad_frontend_rust/src/: lib.rs
src/ICPad_marketplace/: Cargo.toml  ICPad_marketplace.did
src/ICPad_marketplace/src/: lib.rs
src/ICPad_user/: Cargo.toml  ICPad_user.did
src/ICPad_user/src/: lib.rs
token_backend/: ICPad_backend_importer.js  ICPad_marketplace_importer.js  ICPad_user_importer.js
